--- a/.classpath
+++ b/.classpath
@@ -2,16 +2,17 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/fluent-hc-4.5.2.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/httpclient-4.5.2.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/httpclient-cache-4.5.2.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/httpclient-win-4.5.2.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/httpcore-4.4.4.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/httpmime-4.5.2.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/jna-platform-4.1.0.jar"/>
-	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/java-json.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/fluent-hc-4.5.2.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/httpclient-4.5.2.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/httpclient-cache-4.5.2.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/httpclient-win-4.5.2.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/httpcore-4.4.4.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/httpmime-4.5.2.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/java-json.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/javax.json-1.0.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/jna-platform-4.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
