--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,15 @@
 	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/javax.json-1.0.jar"/>
 	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/jna-4.1.0.jar"/>
 	<classpathentry kind="lib" path="/home/zinko/workspace/SzarchClient/elibs/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-forms.jar" sourcepath="lib/jgoodies-forms-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/SzarchClient/lib/jgoodies-forms-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/jgoodies-common.jar" sourcepath="lib/jgoodies-common-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/SzarchClient/lib/jgoodies-common-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
